<resources>
    <string name="app_name">DataBaseDemo</string>
    <string name="demo_person_id">id</string>
    <string name="demo_person_name">name</string>
    <string name="demo_person_age">age</string>
    <string name="demo_person_gender">gender</string>
    <string name="add">add person</string>
    <string name="delete">delete by id</string>
    <string name="update">update by id</string>
    <string name="query">query by gender</string>
    <string name="empty">空</string>
    <string name="demo_input">输入框</string>
    <string name="demo_function">SQL基本功能</string>
    <string name="demo_result_query">查询数据展示</string>
    <string name="demo_result_all">所有数据展示</string>
    <string name="empty_id_error">id不可以为空</string>
    <string name="empty_name_error">name为缺省值default</string>
    <string name="empty_age_error">age不可以为空</string>
    <string name="empty_gender_error">gender不可以为空</string>
</resources>
